--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Welcome to your Vacation Tracker</title>
-  <link rel="stylesheet" href="styles/home.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
 
   <link rel="icon" href="{{url_for('static', filename='images/logo.ico')}}" type="image/png" />
   
@@ -15,7 +15,6 @@
     <div class="container">
       <nav>
         <h1>logo</h1>
-        <image src="{{url_for('static', filename='images/background.png')}}" alt="logo" width="100" height="100">
 
         <ul>
           <li><a href="" class="active">Home</a></li>
@@ -26,8 +25,10 @@
       <div class="article">
         <h2>Track and manage your vacations with ease</h2>
             <p>Log in to view your vacation balance, submit new vacation requests, and more.</p>
-            <a href="" class="btn">Login</a>
+            <a href="/login" class="btn">Login</a>
       </div>
+      </div>
+  </section>
 
 </body>
 </html>
