edit homehtml to have a welcome msg

--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -14,7 +14,7 @@
   <section>
     <div class="container">
       <nav>
-        <h1>logo</h1>
+        <h1>Welcome to Vacation Tracker</h1>
 
         <ul>
           <li><a href="" class="active">Home</a></li>
