--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -324,7 +324,7 @@
                   Activity Log
                 </a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                <a class="dropdown-item" href="/logout" data-toggle="modal" data-target="#logoutModal">
                   <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                   Logout
                 </a>
@@ -358,7 +358,7 @@
             <span aria-hidden="true">×</span>
           </button>
         </div>
-        <form method="post" action="">
+        <form method="post" action="/register">
           <div class="modal-body">
             <div class="form-row">
               <div class="col-md-9">
@@ -366,7 +366,7 @@
                   <label> Title:</label>&nbsp;
                   <select name="title" class="form-control" required>
                     <option value="">Select title...</option>
-                    <option value="Mr."> Madam. </option>
+                    <option value="Mr."> Mr. </option>
                     <option value="Mrs."> Mrs. </option>
                     <option value="Miss"> Miss. </option>
                   </select>
@@ -383,6 +383,10 @@
                 <div class="form-group">
                   <label>Email:</label>
                   <input type="email" name="email" class="form-control" placeholder="Email address" required>
+                </div>
+                <div class="form-group">
+                  <label>Password:</label>
+                  <input type="password" name="password" class="form-control" placeholder="password" required>
                 </div>
                 <div class="form-group">
                   <label>Personal email:</label>
@@ -414,6 +418,18 @@
                   <input type="number" name="Phone" id="gsm1" placeholder="Phone number" class="form-control">
                 </div>
                 <div class="form-group">
+                  <label for="gsm2">* Personal Phone no.:</label>
+                  <input type="number" name="Personal_Phone" id="gsm2" placeholder="Personal Phone" class="form-control">
+                </div>
+                <div class="form-group">
+                  <label for="nid">* National ID Number:</label>
+                  <input type="number" name="National_ID_Number" id="nid" placeholder="National_ID_Number" class="form-control">
+                </div>
+                <div class="form-group">
+                  <label for="uid">* Unit ID:</label>
+                  <input type="text" name="Unit_ID" id="uid" placeholder="Unit_ID" class="form-control">
+                </div>
+                <div class="form-group">
                   <label for="address">* Addres:</label>
                   <textarea name="addr" placeholder="User address information" class="form-control"></textarea>
                 </div>
@@ -429,26 +445,7 @@
     </div>
   </div>
   	
-  <!--<div class="row">
-    {% for user in users.values() %}
-    <div class="col-md-4 mb-4">
-        <div class="card h-100">
-            <div class="card-body">
-                <h5 class="card-title">{{ user.first_name }} {{ user.last_name }}</h5>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><strong>Email:</strong> {{ user.email }}</li>
-                    <li class="list-group-item"><strong>Personal Email:</strong> {{ user.personal_email }}</li>
-                    <li class="list-group-item"><strong>National ID:</strong> {{ user.national_id_number }}</li>
-                    <li class="list-group-item"><strong>Personal Phone:</strong> {{ user.personal_phone }}</li>
-                    <li class="list-group-item"><strong>Phone:</strong> {{ user.phone }}</li>
-                    <li class="list-group-item"><strong>Title:</strong> {{ user.title }}</li>
-                    <li class="list-group-item"><strong>Unit ID:</strong> {{ user.unit_id }}</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    {% endfor %}
-</div>-->
+
 
           <!-- Content Row -->
           <div class="row">
@@ -460,7 +457,9 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Total Active Users</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800"></div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">
+                        {{user_count}}
+                      </div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -532,9 +531,9 @@
             </div>
           </div>-->
 
-          <!-- Page Heading -->
+          <!-- Page Heading 
           <h1 class="h3 mb-2 text-gray-800">Tables</h1>
-          <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below. For more information about DataTables, please visit the <a target="_blank" href="https://datatables.net">official DataTables documentation</a>.</p>
+          <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below. For more information about DataTables, please visit the <a target="_blank" href="https://datatables.net">official DataTables documentation</a>.</p>-->
 
           <!-- DataTales Example -->
           <div class="card shadow mb-4">
@@ -549,7 +548,9 @@
                       
                       <th>Name</th>
                       <th>Email</th>
+                      <th>Password</th>
                       <th>Personal email</th>
+                      <th>User Role</th>
                       <th>National ID Number</th>
                       <th>Personal Phone</th>
                       <th>Phone</th>
@@ -562,7 +563,9 @@
                     <tr>
                       <td>{{user.first_name}} {{user.last_name}}</td>
                       <td>{{ user.email }}</td>
+                      <td>{{ user.password }}</td>                      
                       <td>{{ user.personal_email }}</td>
+                      <td>{{ user.user_role }}</td>
                       <td>{{ user.national_id_number }}</td>
                       <td>{{ user.personal_phone }}</td>
                       <td>{{ user.phone }}</td>
@@ -618,7 +621,7 @@
         <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
+          <a class="btn btn-primary" href="/logout">Logout</a>
         </div>
       </div>
     </div>
