--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -17,9 +17,9 @@
         <h1>Welcome to Vacation Tracker</h1>
 
         <ul>
-          <li><a href="" class="active">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="/home" class="active">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
       <div class="article">
